--- a/views/experiences.ejs
+++ b/views/experiences.ejs
@@ -4,14 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="icon" type="image/png" sizes="16x16" href="/styles/favicon-16x16.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="/styles/favicon-32x32.png"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="/styles/apple-touch-icon.png"/>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/experiences.css"/>
 </head>
 <body>
-<table class="table table-bordered">
+<header>
+            <!-- Including the navbar partial -->
+            <%- include('partials/navbar.ejs') %>
+        </header>
+        <div class="jumbotron jumbotron-fluid bg-primary text-white">
+            <div class="container">
+                <h1 class="display-4">Discover Experiences</h1>
+                <p class="lead">Find and book the best experiences around the world.</p>
+            </div>
+        </div>
+<div class="table-container">
+<table class="table table-bordered table-striped table-hover">
     <thead class="thead-dark">
         <tr>
             <th scope="col">Id</th>
@@ -42,14 +50,27 @@
             <td><%= activity.bookings %></td>
             <td>
                 <form id="bookForm" data-activity-id="<%= activity.id %>">
-                    <button type="submit" onclick="bookingActivity(this)">Book</button>
+                    <button type="submit" onclick="bookingActivity(this)" class="btn btn-primary">Book</button>
                 </form>
             </td>
         </tr>
         <% }); %>
     </tbody>
 </table>
-<script>
+</div>
+
+
+ <!-- Including the footer partial -->
+        <%- include('partials/footer.ejs') %>
+ <!-- Scripts -->
+
+
+ <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+ <script src="/js/home.js"></script>
+ <script>
+
     async function bookingActivity(button) {
 const buttonid = button.parentElement.getAttribute('data-activity-id');
 try {
