--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,7 +9,7 @@
                 <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/browse">Browse Experiences</a>
+                <a class="nav-link" href="/experiences">Browse Experiences</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/book">Book Experience</a>
