--- a/views/experiences.ejs
+++ b/views/experiences.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,11 +17,17 @@
                 <p class="lead">Find and book the best experiences around the world.</p>
             </div>
         </div>
+        <section class="hero text-center my-5">
+            <h2 class="display-4">Experience Browser</h2>            
+        </section>
+        <section>
+        <input type="text" id="search" placeholder="Search Region">
+        <button onclick="search()" class="btn-primary">Search</button>
+        </section>
 <div class="table-container">
 <table class="table table-bordered table-striped table-hover">
     <thead class="thead-dark">
-        <tr>
-            <th scope="col">Id</th>
+        <tr>            
             <th scope="col">Name</th>
             <th scope="col">Type</th>
             <th scope="col">Country</th>
@@ -39,7 +44,6 @@
     <tbody>
         <% activities.forEach((activity) => { %>
         <tr>
-            <td><%= activity.id %></td>
             <td><%= activity.exp_name %></td>
             <td><%= activity.exp_type %></td>
             <td><%= activity.country %></td>
@@ -50,7 +54,7 @@
             <td><%= activity.bookings %></td>
             <td>
                 <form id="bookForm" data-activity-id="<%= activity.id %>">
-                    <button type="submit" onclick="bookingActivity(this)" class="btn btn-primary">Book</button>
+                    <button type="submit" onclick="bookingActivity(this)" class="btn-primary">Book</button>
                 </form>
             </td>
         </tr>
@@ -68,25 +72,6 @@
  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
- <script src="/js/home.js"></script>
- <script>
-
-    async function bookingActivity(button) {
-const buttonid = button.parentElement.getAttribute('data-activity-id');
-try {
-    const response = await fetch(`/book/${buttonid}`,
-    {method: 'PUT'}
-    )
-    if(response.ok){
-        console.log(`Successfully booked activity`);
-    }
-    else {
-        console.log(`Failed to log.`);
-    }
-} catch (err) {
-    console.error(err);
-}
-}   
-</script>
+ <script src="/js/experiences.js"></script>
 </body>
-</html>>
+</html>
