--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/footer.css"/>
 <footer>
-    <p>&copy; 2023 Experiences Site. All rights reserved.</p>
+    <p>&copy; 2023 Travel Booking Site. All rights reserved. Created by Richard Adler</p>
 </footer>
