--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,8 @@
+<link rel="stylesheet" href="/css/navbar.css"/>
+<% 
+let currentPath = req.originalUrl; 
+%>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">Experiences Site</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -5,17 +10,20 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item <%= currentPath === '/' ? 'active' : '' %>">
                 <a class="nav-link" href="/">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item <%= currentPath.startsWith('/experiences') ? 'active' : '' %>">
                 <a class="nav-link" href="/experiences">Browse Experiences</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item <%= currentPath.startsWith('/book') ? 'active' : '' %>">
                 <a class="nav-link" href="/book">Book Experience</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item <%= currentPath.startsWith('/contact') ? 'active' : '' %>">
                 <a class="nav-link" href="/contact">Contact Us</a>
+            </li>
+            <li class="nav-item <%= currentPath.startsWith('/login') ? 'active' : '' %>">
+                <a class="nav-link" href="/login">Login</a>
             </li>
         </ul>
     </div>
